added intro video to front page

--- a/web/html/welcome.html
+++ b/web/html/welcome.html
@@ -14,7 +14,7 @@ Dutch Ships and Sailors (DSS) Semantic Layer
 <h2>Viewing the data</h2>
 <p>You are now looking at the ClioPatria user interface to the DSS data, which allows you to browse the data. One way to start is by <a href="./browse/list_graphs">browsing the RDF Graphs</a> loaded. By selecting a graph, you can then click through to see basic statistics or download the graphs in multiple formats. You can also use the search field in the top-right corner to search for resources with matching labels. The search field has semantic auto-completion to allow you to select specific search terms.</p>
 <p>For more complex queries, we have a number of interfaces to the SPARQL endpoint (For example the great  <a href="./yasgui/index.html">YASGUI</a>). On the <a href="./dss_queries">DSS Queries</a> page, we have listed a number of interesting example queries. Lastly, the provenance of the data can be visualized using <a href="./provoviz">provoviz</a>.
-
+<p>To get a quick overview of the project and this demonstrator you can watch the five-minute video below.<iframe width="560" height="315" src="https://www.youtube.com/embed/YEQJk6sK_U8" frameborder="0" allowfullscreen></iframe></p>
 
 <h2>About the project</h2>
 <p>This semantic layer was realized by <a href="http://www.victordeboer.com">Victor de Boer</a> (VU University Amsterdam)in the context of the <a href="http://www.clarin.nl">CLARIN-NL</a> <a href="http://dutchshipsandsailors.nl">Dutch Ships and Sailors</a> project in cooperation with Huygens ING and the history department of VU. This semantic layer is realized using <a href="http://cliopatria.swi-prolog.org">Cliopatria</a>, the SWI-Prolog Semantic Web Server</p>
