Use local homepage image (avoid using http)

--- a/web/html/welcome.html
+++ b/web/html/welcome.html
@@ -9,7 +9,7 @@ Dutch Ships and Sailors (DSS) Semantic Layer
 </h1>
 <p>On this page, you find a live version of the Semantic Layer made for the <a href="http://www.dutchshipsandsailors.nl">Dutch Ships and Sailors</a> project.
 <center>
-<img src="http://www.few.vu.nl/~vbr240/other/dss_welcome.png" alt="Overview showing links of DSS and the Web of Data">
+<img src="../icons/dss_welcome.png" alt="Overview showing links of DSS and the Web of Data">
 </center>
 <h2>Viewing the data</h2>
 <p>You are now looking at the ClioPatria user interface to the DSS data, which allows you to browse the data. One way to start is by <a href="./browse/list_graphs">browsing the RDF Graphs</a> loaded. By selecting a graph, you can then click through to see basic statistics or download the graphs in multiple formats. You can also use the search field in the top-right corner to search for resources with matching labels. The search field has semantic auto-completion to allow you to select specific search terms.</p>
